fixup api style
